@@ -1,13 +1,13 @@
-2ba8cdc1641fb2f4c780480245f0dd06 *DESCRIPTION
-415eddac8727f5693fd176708fc2a3c3 *NAMESPACE
-cf15e7a3373c365c2762973922697bbc *R/lsgl_config.R
-2c961d6bed15591389458a7aec57ad91 *R/lsgl_cv.R
+f2f7407d97b56bca32becbb50e7bc3a9 *DESCRIPTION
+cf38c8a8a01496d2d6992cf2d78ed044 *NAMESPACE
+1819783776651afbb75137c427538fa3 *R/lsgl_config.R
+22d4705a02a62aa33a011778ef13b9a5 *R/lsgl_cv.R
 7ee9484d6563e5b82283ef9b6b7724e4 *R/lsgl_fit.R
 c08391be3fdb3d59c1058abf81bb9d47 *R/lsgl_navigate.R
 e7116368be1b84682096f26532775059 *R/lsgl_predict.R
-25a55de4af270245a171d8c7f39c0069 *R/lsgl_subsampling.R
-1159bb2e320530abfa89e73fde11434b *R/startup.R
-9aeddac9c6153ee071a1e703c68f411b *inst/NEWS.Rd
+3debc022eeaee23879503db6b41030d9 *R/lsgl_subsampling.R
+715f2a3300316407c319cfca3e0cee8c *R/startup.R
+52b59292375a85863545afbfdd3d1f3b *inst/NEWS.Rd
 6242c8f6535b953868b7b4a09172ca0f *man/Err.lsgl.Rd
 c3c35da07d27bdce64f7e4f3cc7b43a2 *man/best_model.lsgl.Rd
 a86d1fe9b6fd8f63575b5089d1ebfbcd *man/coef.lsgl.Rd
@@ -15,11 +15,10 @@ a86d1fe9b6fd8f63575b5089d1ebfbcd *man/coef.lsgl.Rd
 af4ff4e20fae85147542e70d2e97b082 *man/features_stat.lsgl.Rd
 51505b2bbbac9a9d371a194e8138a09d *man/lsgl.Rd
 e78994208feea2b8a3220701bf524eea *man/lsgl.algorithm.config.Rd
-0c6afbd7609403145ca8751b5f050764 *man/lsgl.c.config.Rd
-d360730d2315cb5dc53d9a75457a5107 *man/lsgl.cv.Rd
+4e36979687e764d5054af6050aa92fa3 *man/lsgl.cv.Rd
 e2e7341196f1aa64290db497e2131c1a *man/lsgl.lambda.Rd
 baae055d2979df60d57b1bed7d92a351 *man/lsgl.standard.config.Rd
-a2335a57e210135e2ba7589975176b6e *man/lsgl.subsampling.Rd
+b87439d70c9977819b7f10acee2ea7ca *man/lsgl.subsampling.Rd
 29938af945807d1be952e2d794e9cdbc *man/models.lsgl.Rd
 8233940c7951d668cf40f907032a2b1e *man/nmod.lsgl.Rd
 7a46ebcbb02023b4e8c92469d46c108e *man/parameters.lsgl.Rd
@@ -29,12 +28,12 @@ dc2a0fd495cec1fd89e921ee67ffceab *man/print.lsgl.Rd
 d18dafe04a9609019597104faf346da7 *src/Makevars
 5b9bbcf110f0f147c3533efde879caaa *src/frobenius_norm.h
 7514fa365974b56020f615e72cd08bd6 *src/frobenius_norm_weighted.h
-138fe9e3af07fa3a332d1a4fb9cbdc6a *src/lsgl.cpp
-e6d7bd934b63dda4b32ff6a3f8e65cba *src/pkg_c_config.h
+b00c26af62f072f62f118025901f9a61 *src/lsgl.cpp
+03ff83f17cc19addc7ffeb8b261e003f *src/pkg_c_config.h
 785311fffe98d5f185579e4525d581a8 *tests/A_lsgl_fit_test.R
-de123ef4df04f516b971f74fef8f751a *tests/B_lsgl_cv_test.R
-572113e55da9c4d985ad55ee08fbf341 *tests/B_lsgl_subsampling_test.R
-b9878ed4110e32bcfadd38690844ac34 *tests/C_lsgl_omp_test.R
+a5afee008b1534bb8b486a250546acda *tests/B_lsgl_cv_test.R
+5d54bbcc232edf3fa4ea9994a281a262 *tests/B_lsgl_subsampling_test.R
+d6cd22b612301d77a6a7f283c95f47a4 *tests/C_lsgl_omp_test.R
 7fc26c636be4c3f43211a2ef86f8cac5 *tests/D_lsgl_grouping_test.R
 dc5f0f80a83dee12a4ee178f4eb1d875 *tests/E_lsgl_navigate_test.R
-1f605ee32afdaffb96678bb9541d429c *tests/H_configuration_test.R
+3be82ee74428dd970a1c21a13e645f62 *tests/H_configuration_test.R
