@@ -13,7 +13,6 @@ S3method(predict,lsgl)
 S3method(print,lsgl)
 export(lsgl)
 export(lsgl.algorithm.config)
-export(lsgl.c.config)
 export(lsgl.cv)
 export(lsgl.lambda)
 export(lsgl.standard.config)
@@ -25,4 +24,3 @@ importFrom(methods,is)
 importFrom(stats,coef)
 importFrom(utils,packageVersion)
 useDynLib(lsgl, .registration=TRUE)
-useDynLib(lsgl,r_pkg_c_config)
