@@ -110,13 +110,3 @@ lsgl.algorithm.config <- function(tolerance_penalized_main_equation_loop = 1e-10
 #' @author Martin Vicnet
 #' @export
 lsgl.standard.config <- lsgl.algorithm.config();
-
-#' Featch information about the C side configuration of the package
-#' @return list
-#'
-#' @author Martin Vicnet
-#' @useDynLib lsgl r_pkg_c_config
-#' @export
-lsgl.c.config <- function() {
-	.Call("r_pkg_c_config")
-}
