@@ -1,18 +1,0 @@
-% Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/lsgl_config.R
-\name{lsgl.c.config}
-\alias{lsgl.c.config}
-\title{Featch information about the C side configuration of the package}
-\usage{
-lsgl.c.config()
-}
-\value{
-list
-}
-\description{
-Featch information about the C side configuration of the package
-}
-\author{
-Martin Vicnet
-}
-
