@@ -2,7 +2,7 @@ library(lsgl)
 # warnings = errors
 options(warn=2)
 
-c_config <- lsgl.c.config()
+c_config <- sgl.c.config()
 
 if(c_config$timing) stop()
 
